<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ PackList is an open-source packing-list for Android
  ~
  ~ Copyright (c) 2017 Nicolas Bossard and other contributors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<!-- strings.xml -->
<!-- -->
<!-- English strings used in application -->
<!-- -->
<!-- Strings should be grouped by activity / fragment -->
<!-- -->
<!-- Remember : -->
<!--   No space before ":" (in english) -->
<!--   "fab" stands for Floating Action Button -->
<!--   "cab" stands for Contextual Action Bar-->
<resources>
    <!-- Non-translatable strings -->

    <!-- Common strings -->
    <string name="app_name">packlist</string>
    <string name="demo_changelog_title_standarddialog">Change log</string>
    <string name="about_ok">OK</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="toast_update_failed_incompatible_format">Update failed, this is probably due to an incompatibility between an old trip and current format, try deleting and recreating this item or this trip.</string>

    <!-- Menu items -->
    <string name="action__whatsnew">What\'s new</string>
    <string name="action__settings">Settings</string>
    <string name="action__send_logs">Send a report</string>
    <string name="action__about">About</string>
    <string name="action_trip__sort">Sort</string>
    <string name="action_trip__import">Import text file</string>
    <string name="action_trip__unpack_all">unpack all items</string>

    <!-- About page -->
    <string name="about__main">Packing list %1$s.\n%2$s\nCopyright © 2015&#8211;2017\nNBossard and other contributors&#8211;2016.\n Apache 2 Licensed.\n Please provide help and suggestions at \n https://github.com/nbossard/packlist</string>
    <string name="about__many_thanks_to_contributors">Many thanks to\n -naofum, for Japanese translation\n  -Christophe Paccolat for German translations\n  -Myjourney for Chinese translations - "isaideureka" and "fafarsdq" for indonesian translations</string>
    <string name="about__third_party__button">third party libraries</string>
    <string name="about_act__fab_go_to_website">Open website</string>

    <!-- Main page -->
    <string name="main__welcome">Here is the list of your trips, please click on one for details</string>
    <string name="main__no_trip_yet__label">No trip planned yet,\nclick + button below to add a new trip</string>
    <string name="action_main_cab__clone">Clone</string>
    <string name="action_main_cab__delete">Delete</string>
    <string name="mainact__fab_add_a_trip">Add a new trip</string>

    <plurals name="ta__in_x_days">
        <item quantity="one">In %d day.</item>
        <item quantity="other">In %d days.</item>
    </plurals>
    <plurals name="ta__x_days_ago">
        <item quantity="one">%d day ago.</item>
        <item quantity="other">%d days ago.</item>
    </plurals>

    <string name="trip_deletion_confirm__title">Sounds like a bad idea…</string>
    <string name="trip_deletion_confirm__body">Old trips are used as a base of knowdlege for suggesting you items and categories, you should keep them if possible.\n\nReally delete?</string>

    <!-- New trip fragment -->
    <string name="new_trip__name">trip name</string>
    <string name="new_trip__start_date">start date</string>
    <string name="new_trip__start_date_access__button">modify start date</string>
    <string name="new_trip__end_date">end date</string>
    <string name="new_trip__end_date_access__button">modify end date</string>
    <string name="new_trip__note">note</string>
    <string name="new_trip__submit">let\'s go…</string>

    <!-- Detail of trip -->
    <string name="trip_detail__main__titlebar">List for %1s</string>
    <string name="trip_detail__end_date__label">to</string>
    <string name="trip_detail__start_date__label">from</string>
    <string name="trip_detail__add_item___button">Add item</string>
    <string name="trip_detail__add_item_detail___button">More</string>
    <string name="trip_detail__no_item_yet__label">No item yet, use add field below</string>
    <string name="trip_detail__edit_trip">edit trip</string>
    <string name="trip_detail__before_weight__label">weight of bag: more than %1$dg (%2$dg&#160;packed).</string>
    <string name="trip_detail__new_item__access">name&#8230;</string>
    <string name="trip_detail__new_item_magic___access">Button. Suggest an item</string>
    <string name="trip_detail__already_existing_item">This item already exists in the trip.</string>
    <string name="trip_detail__no_more_items__toast">No more suggestion</string>
    <string name="action_trip_cab__delete">@string/action_main_cab__delete</string>
    <string name="action_trip_cab__edit">Edit</string>
    <string name="action_trip__share">Share</string>
    <string name="sorting_mode">Sorting mode is now %s.</string>
    <string name="sorting_mode_default">default</string>
    <string name="sorting_mode_unpacked_first">unpacked first</string>
    <string name="sorting_mode_alphabetical">alphabetical order</string>
    <string name="sorting_mode_category">category</string>

    <!-- Third party software licences -->
    <string name="help_legal__third_party__title">third party libraries</string>
    <string name="help_legal__third_party__label"><u>third party libraries</u></string>
    <string name="help_legal__third_party_lib_hugo__label"><b>Hugo</b>\nCopyright © 2013 Jake Wharton,\n(<a href="https://github.com/JakeWharton/hugo">https://github.com/JakeWharton/hugo</a>)\n Hugo is licensed under the Apache License, Version 2.0\n(<a href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a> )</string>
    <string name="help_legal__third_party_lib_gson__label"><b>Gson</b>\n(<a href="https://code.google.com/p/google-gson/">https://code.google.com/p/google-gson/</a>)\nCopyright © 2004 Google\nGson is licensed under the Apache License, Version 2.0\n(<a href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a> )</string>
    <string name="help_legal__third_party_lib_changelog__label"><b>Changelog</b>\n(<a href="https://github.com/gabrielemariotti/changeloglib">https://github.com/gabrielemariotti/changeloglib</a>)\nCopyright © 2004 gabriele mariotti\n/changeloglib is licensed under the Apache License, Version 2.0\n(<a href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a> )</string>
    <string name="help_legal__third_party_lib_datetimepicker__label"><b>DateTimePicker</b>\n(<a href="https://github.com/flavienlaurent/datetimepicker">https://github.com/flavienlaurent/datetimepicker</a>)\nCopyright © 2015 Flavien Laurent\n/changeloglib is licensed under the Apache License, Version 2.0\n(<a href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a> )</string>
    <string name="help_legal__third_party_lib__groovy_android_gradle_plugin__label"><b>Groovy language support for Android</b>\n(<a href="https://github.com/groovy/groovy-android-gradle-plugin">https://github.com/groovy/groovy-android-gradle-plugin</a>)\nCopyright © 2016 the original author or authors\n/groovy-android-gradle-plugin is licensed under the Apache License, Version 2.0\n(<a href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a> )</string>
    <string name="help_legal__third_party_lib__acra__label"><b>Application Crash Reporting for Android</b>\nCopyright © 2013 Kevin Gaudin\nApplication Crash Reporting for Android is licensed under the Apache License, Version 2.0\n(<a href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a>)</string>
    <string name="help_legal__third_party_lib__mli__label"><b>Material Letter Icon</b>\nCopyright © 2016 IvBaranov\nMaterial Letter Icon is licensed under the Apache License, Version 2.0\n(<a href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a>)</string>

    <!-- Detail of item -->
    <string name="item_detail__name__label">item name</string>
    <string name="item_detail__weight__label">weight (in grams)</string>
    <string name="item_detail__submit">UPDATE</string>
    <string name="item_detail__category__label">Category</string>

    <!-- Mass import -->
    <string name="mass_import__principle_explanation_new_trip__label">This dialog is for help of mass import of items into a new trip, paste your existing list of items below. One item per line.\n\ni.e.:\nVarious:Guide book (100g).</string>
    <string name="mass_import__principle_explanation_with_name__label">This dialog is for help of mass import of items into trip \"%1$s\", paste your existing list of items below. One item per line.\n\ni.e.:\nVarious:Guide book (100g).</string>
    <string name="mass_import__import__button">Import</string>
    <string name="mass_import__items__hint">type or paste here&#8230;</string>

    <!-- for ACRA (Application CRash Reports) reports -->
    <string name="acra__dialog__title" translatable="false">@string/app_name</string>
    <string name="acra__crash_report_dialog__label">Click OK to send application logs.</string>

    <!-- For Settings -->
    <string name="activity_settings__title" translatable="false">@string/action__settings</string>
    <string name="pref_display_dates">Display dates</string>
    <string name="pref_display_dates_sum">Display trip dates on dashboard</string>

</resources>
