<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ PackList is an open-source packing-list for Android
  ~
  ~ Copyright (c) 2017 Nicolas Bossard and other contributors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_trip__share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_trip__share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_trip__sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/action_trip__sort"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_trip__import_txt"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_trip__import"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_trip__unpack_all"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/action_trip__unpack_all"
        app:showAsAction="ifRoom"/>
</menu>