<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ PackList is an open-source packing-list for Android
  ~
  ~ Copyright (c) 2016 Nicolas Bossard and other contributors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<!-- menu_main.xml -->
<!-- -->
<!-- Menu displayed on main activity (overflow button). -->
<!-- Ids for this page must start with "action__" -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".gui.MainActivity">

    <item
        android:id="@+id/action__settings"
        android:orderInCategory="100"
        android:title="@string/action__settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action__send_logs"
        android:orderInCategory="100"
        android:title="@string/action__send_logs"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action__whatsnew"
        android:orderInCategory="100"
        android:title="@string/action__whatsnew"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action__about"
        android:orderInCategory="200"
        android:title="@string/action__about"
        app:showAsAction="never"/>
</menu>
