<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ PackList is an open-source packing-list for Android
  ~
  ~ Copyright (c) 2016 Nicolas Bossard and other contributors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<!-- TripItem detailed characteristics input page -->
<!---->
<!-- Resources and Ids for this page must start with "item_detail__" -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.nbossard.packlist.model.TripItem"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/margin_end"
        android:paddingLeft="@dimen/margin_start"
        android:paddingRight="@dimen/margin_end"
        android:paddingStart="@dimen/margin_start"
        android:paddingTop="@dimen/margin_top">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/item_detail__name__edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/accessibility_edit_text_min_height"
                android:hint="@string/item_detail__name__label"
                android:text="@{item.name}"
                android:inputType="text"
                tools:text="Chapeau"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/item_detail__weight__edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/accessibility_edit_text_min_height"
                android:hint="@string/item_detail__weight__label"
                android:text="@{String.valueOf(item.weight)}"
                android:inputType="text"
                tools:text="100"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/item_detail__category__edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/accessibility_edit_text_min_height"
                android:hint="@string/item_detail__category__label"
                android:text="@{item.category}"
                android:inputType="text"
                tools:text="Chaussettes"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/item_detail__submit__button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:minHeight="@dimen/accessibility_button_min_height"
            android:text="@string/item_detail__submit"/>

    </LinearLayout>
</layout>