<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ PackList is an open-source packing-list for Android
  ~
  ~ Copyright (c) 2016 Nicolas Bossard.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<!-- Display a trip -->
<!---->
<!-- Resources and Ids for this page must start with "trip_detail__" -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="trip"
            type="com.nbossard.packlist.model.Trip"/>
        <import type="android.view.View" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/margin_end"
        android:paddingLeft="@dimen/margin_start"
        android:paddingRight="@dimen/margin_end"
        android:paddingStart="@dimen/margin_start"
        android:paddingTop="@dimen/margin_top">

        <TextView
            android:id="@+id/trip_detail__name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:labelFor="@+id/trip_detail__name__edit"
            android:text="@{trip.name}"
            tools:text="Verdun"/>

        <!-- for display of dates -->
        <LinearLayout
            android:id="@+id/trip_detail__date__layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trip_detail__name"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trip_detail__start_date__label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/trip_detail__start_date__label"
                android:visibility="@{trip.startDate.length==0 ? View.GONE : View.VISIBLE}"/>

            <android.support.v4.widget.Space
                android:layout_width="@dimen/space_label_value"
                android:layout_height="1dip"/>

            <TextView
                android:id="@+id/trip_detail__start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{trip.startDate}"
                tools:text="20 décembre 2015"/>

            <android.support.v4.widget.Space
                android:layout_width="@dimen/space_label_value"
                android:layout_height="1dip"/>

            <TextView
                android:id="@+id/trip_detail__end_date__label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/trip_detail__end_date__label"
                android:visibility="@{trip.endDate.length==0 ? View.GONE : View.VISIBLE}"/>

            <android.support.v4.widget.Space
                android:layout_width="@dimen/space_label_value"
                android:layout_height="1dip"/>

            <TextView
                android:id="@+id/trip_detail__end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{trip.endDate}"
                tools:text="28 décembre 2015"/>
        </LinearLayout>

        <TextView
            android:id="@+id/trip_detail__note__label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/trip_detail__date__layout"
            android:text="@{trip.note}"
            tools:text="Un très beau voyage"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/trip_detail__new_item__button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_detail__add_item___button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/trip_detail__new_item__edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/trip_detail__new_item__button"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/trip_detail__new_item__button"/>

        <ListView
            android:id="@+id/trip_detail__list"
            android:layout_below="@id/trip_detail__note__label"
            android:layout_above="@id/trip_detail__new_item__edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>
</layout>